# superpowered-example

app/: build.gradle
app/src/androidTest/java/com/superpowered/superpoweredexample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/superpowered/superpoweredexample/: MainActivity.java  SuperPoweredPlayer.java
app/src/main/jni/: AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  SuperpoweredExample.cpp  SuperpoweredExample.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-v21/: styles.xml
app/src/test/java/com/superpowered/superpoweredexample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
